--- a/MaxFactry.Module.App.Mvc4-NF-4.5.2/MaxFactry.Module.App.Mvc4-NF-4.5.2.ref.csproj
+++ b/MaxFactry.Module.App.Mvc4-NF-4.5.2/MaxFactry.Module.App.Mvc4-NF-4.5.2.ref.csproj
@@ -31,7 +31,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin.ref\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE;DEBUG;net2;net4_52</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -251,4 +251,11 @@
   </Target>
   <Target Name="AfterBuild">
   </Target> -->
+  <Target Name="SpicNSpan" AfterTargets="Clean">
+    <!-- common vars https://msdn.microsoft.com/en-us/library/c02as0cs.aspx?f=255&MSPPError=-2147217396 -->
+    <RemoveDir Directories="$(TargetDir)" />
+    <!-- bin -->
+    <RemoveDir Directories="$(ProjectDir)$(BaseIntermediateOutputPath)" />
+    <!-- obj -->
+  </Target>
 </Project>
