--- a/MaxFactry.Module.App.Mvc5-NF-4.7.2/Web.config
+++ b/MaxFactry.Module.App.Mvc5-NF-4.7.2/Web.config
@@ -72,6 +72,14 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MaxFactry.Base-NF-4.7.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.20.4" newVersion="1.0.20.4" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MaxFactry.General.AspNet.IIS-NF-4.7.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.20.1" newVersion="1.0.20.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
