--- a/.nuget/MaxFactry.Module.App.Mvc5.nuspec
+++ b/.nuget/MaxFactry.Module.App.Mvc5.nuspec
@@ -2,7 +2,7 @@
 <package  xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 	<metadata>
 		<id>MaxFactry.Module.App.Mvc5</id>
-		<version>1.0.20</version>
+		<version>1.0.20.1</version>
 		<title>MaxFactry App Module for IIS using Mvc4</title>
 		<authors>Brian Lakstins</authors>
 		<owners>brianlakstins</owners>
@@ -15,19 +15,20 @@
 		<tags></tags>
 		<dependencies>
 			<group targetFramework="net452">
-				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20" />
-				<dependency id="MaxFactry.Module.App" version="1.0.20" />
+				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20.3" />
+				<dependency id="MaxFactry.Module.App" version="1.0.20.1" />
 			</group>
 			<group targetFramework="net472">
-				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20" />
-				<dependency id="MaxFactry.Module.App" version="1.0.20" />
+				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20.3" />
+				<dependency id="MaxFactry.Module.App" version="1.0.20.1" />
 			</group>
 			<group targetFramework="net48">
-				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20" />
-				<dependency id="MaxFactry.Module.App" version="1.0.20" />
+				<dependency id="MaxFactry.General.AspNet.IIS.Mvc5" version="1.0.20.3" />
+				<dependency id="MaxFactry.Module.App" version="1.0.20.1" />
 			</group>
 		</dependencies>
 		<summary>MaxFactry App Module Asp.Net for IIS supports the MaxFactry Framework</summary>
+		<readme>readme.md</readme>
 	</metadata>
 	<files>
 		<file src="readme.md" target="" />
