--- a/MaxFactry.Module.App.Mvc5-NF-4.5.2/Web.config
+++ b/MaxFactry.Module.App.Mvc5-NF-4.5.2/Web.config
@@ -36,6 +36,10 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MaxFactry.Base-NF-4.5.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.1" newVersion="1.0.24.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
