--- a/MaxFactry.Module.App.Mvc5-NF-4.7.2/Web.config
+++ b/MaxFactry.Module.App.Mvc5-NF-4.7.2/Web.config
@@ -74,7 +74,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MaxFactry.Base-NF-4.7.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.24.1" newVersion="1.0.24.1" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.38" newVersion="1.0.24.38" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MaxFactry.General-NF-4.7.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.38" newVersion="1.0.24.38" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
