--- a/MaxFactry.Module.App.Mvc5-NF-4.5.2/Web.config
+++ b/MaxFactry.Module.App.Mvc5-NF-4.5.2/Web.config
@@ -38,11 +38,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MaxFactry.Base-NF-4.5.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.24.38" newVersion="1.0.24.38" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.44" newVersion="1.0.24.44" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MaxFactry.General-NF-4.5.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.24.38" newVersion="1.0.24.38" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.44" newVersion="1.0.24.44" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MaxFactry.General.AspNet-NF-4.5.2" publicKeyToken="fbbc3eafbb4c95f8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.24.40" newVersion="1.0.24.40" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
